--- a/.github/workflows/service_tests.yml
+++ b/.github/workflows/service_tests.yml
@@ -10,13 +10,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Clear Python cache
+      run: rm -rf ${{ runner.tool_cache }}
+
     - name: Checkout repository
       uses: actions/checkout@v2
 
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: 3.10
+        python-version: '3.10'
 
     - name: Install dependencies
       run: |
