--- a/.github/workflows/service_tests.yml
+++ b/.github/workflows/service_tests.yml
@@ -10,9 +10,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Clear Python cache
-      run: rm -rf ${{ runner.tool_cache }}
-
     - name: Checkout repository
       uses: actions/checkout@v2
 
@@ -23,17 +20,17 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
+        python3 -m pip install --upgrade pip
         pip install -r requirements.txt
 
     - name: Set up SQLite (for testing with an in-memory database)
       run: |
-        python -c 'from app import db; db.create_all()'
+        python3 -c 'from app import app, db; with app.app_context(): db.create_all()'
 
     - name: Run tests
       run: |
-        python -m unittest discover -s app/tests
+        python3 -m unittest discover -s app/tests
 
     - name: Clean up SQLite
       run: |
-        python -c 'from app import db; db.drop_all()'
+        python3 -c 'from app import app, db; with app.app_context(): db.drop_all()'
