--- a/.github/workflows/service_tests.yml
+++ b/.github/workflows/service_tests.yml
@@ -23,14 +23,18 @@ jobs:
         python3 -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Set up SQLite (for testing with an in-memory database)
-      run: |
-        python3 -c 'from app import app, db; with app.app_context(): db.create_all()'
-
     - name: Run tests
       run: |
         python3 -m unittest discover -s app/tests
 
     - name: Clean up SQLite
       run: |
-        python3 -c 'from app import app, db; with app.app_context(): db.drop_all()'
+        python3 -c 'from app import db; db.drop_all()'
+
+    - name: Set up and initialize SQLite (for testing with an in-memory database)
+      run: |
+        python3 -c 'from app import db; db.create_all()'
+
+    - name: Start Flask application
+      run: |
+        python3 run.py
