--- a/.github/workflows/service_tests.yml
+++ b/.github/workflows/service_tests.yml
@@ -32,7 +32,7 @@ jobs:
 
     - name: Set up and initialize SQLite (for testing with an in-memory database)
       run: |
-        python3 -c 'from app import db; db.create_all()'
+        python3 -c 'from app import app, db; app.app_context().push(); db.create_all()'
 
     - name: Run tests
       run: |
