--- a/.github/workflows/service_tests.yml
+++ b/.github/workflows/service_tests.yml
@@ -14,39 +14,23 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Set up Python 3.10
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v2
       with:
         python-version: '3.10'
 
-    - name: Configure Environment Variables
+    - name: Set up Python environment
       run: |
-        echo "FLASK_APP=run.py" >> $GITHUB_ENV
-        echo "FLASK_ENV=testing" >> $GITHUB_ENV
-      env:
-        FLASK_APP: run.py
-        FLASK_ENV: testing
-
-    - name: Install Dependencies
-      run: |
-        python -m pip install --upgrade pip
+        python -m venv env
+        source env/bin/activate
+        python3 -m pip install --upgrade pip
         pip install -r requirements.txt
+        export "FLASK_ENV=testing" >> .env
 
     - name: Initialize SQLite Database
       run: |
         flask db init
         flask db migrate
         flask db upgrade
-      env:
-        FLASK_APP: ${{ env.FLASK_APP }}
-        FLASK_ENV: ${{ env.FLASK_ENV }}
 
     - name: Run Unit Tests
       run: python -m unittest discover
-
-    - name: Clean Up SQLite Database
-      run: |
-        flask clean-db
-        rm -f test.db
-      env:
-        FLASK_APP: ${{ env.FLASK_APP }}
-        FLASK_ENV: ${{ env.FLASK_ENV }}
