work in progress

--- a/.github/workflows/service_tests.yml
+++ b/.github/workflows/service_tests.yml
@@ -24,9 +24,12 @@ jobs:
 
     - name: Initialize SQLite Database
       run: |
+        export FLASK_APP=run.py
         flask db init
         flask db migrate
         flask db upgrade
 
     - name: Run Unit Tests
-      run: python -m unittest discover
+      run: |
+        export FLASK_ENV=testing
+        python -m unittest discover
