--- a/.github/workflows/service_tests.yml
+++ b/.github/workflows/service_tests.yml
@@ -1,3 +1,5 @@
+name: CI
+
 on:
   push:
     branches:
@@ -20,8 +22,13 @@ jobs:
       run: |
         python3 -m pip install --upgrade pip
         pip install -r requirements.txt
-        echo "::set-env name=FLASK_ENV::testing"
-        
+
+    - name: Set FLASK_ENV
+      run: |
+        echo "export FLASK_ENV=$FLASK_ENV" >> $GITHUB_ENV
+      env:
+        FLASK_ENV: ${{ secrets.FLASK_ENV }}
+
     - name: Initialize SQLite Database
       run: |
         flask db init
@@ -29,5 +36,4 @@ jobs:
         flask db upgrade
 
     - name: Run Unit Tests
-      run: |
-        python -m unittest discover
+      run: python -m unittest discover
