Add code coverage tool (coverage.py) for test analysis

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ astroid==3.0.0
 blinker==1.6.3
 cffi==1.16.0
 click==8.1.7
+coverage==7.3.2
 cryptography==41.0.4
 dill==0.3.7
 Flask==3.0.0
@@ -20,7 +21,6 @@ psycopg2-binary==2.9.9
 pycparser==2.21
 PyJWT==2.8.0
 pylint==3.0.1
-python-dotenv==1.0.0
 SQLAlchemy==2.0.22
 tomli==2.0.1
 tomlkit==0.12.1
