--- a/requirements.txt
+++ b/requirements.txt
@@ -6,21 +6,28 @@ click==8.1.7
 coverage==7.3.2
 cryptography==41.0.4
 dill==0.3.7
+exceptiongroup==1.1.3
 Flask==3.0.0
+Flask-Mail==0.9.1
 Flask-Migrate==4.0.5
 Flask-SQLAlchemy==3.1.1
 greenlet==3.0.0
+iniconfig==2.0.0
 isort==5.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.2.4
 MarkupSafe==2.1.3
 mccabe==0.7.0
+packaging==23.2
 platformdirs==3.11.0
+pluggy==1.3.0
 psycopg2-binary==2.9.9
 pycparser==2.21
 PyJWT==2.8.0
 pylint==3.0.1
+pytest==7.4.2
+python-dotenv==1.0.0
 SQLAlchemy==2.0.22
 tomli==2.0.1
 tomlkit==0.12.1
