--- a/.github/workflows/service_tests.yml
+++ b/.github/workflows/service_tests.yml
@@ -39,3 +39,5 @@ jobs:
         MAIL_USERNAME: ${{ secrets.MAIL_USERNAME }}
         MAIL_PASSWORD: ${{ secrets.MAIL_PASSWORD }}
         MAIL_DEFAULT_SENDER: ${{ secrets.MAIL_DEFAULT_SENDER }}
+        SECRET_KEY: ${{ secrets.SECRET_KEY }}
+        REFRESH_SECRET_KEY: ${{ secrets.REFRESH_SECRET_KEY }}
