Refine CI Workflow Configuration

--- a/.github/workflows/service_tests.yml
+++ b/.github/workflows/service_tests.yml
@@ -23,17 +23,26 @@ jobs:
         python3 -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Set FLASK_ENV and initialize database
+    - name: Initialize database
       run: |
-        echo "export FLASK_ENV=$FLASK_ENV" >> $GITHUB_ENV
         flask db init
         flask db migrate
         flask db upgrade
       env:
         FLASK_ENV: ${{ secrets.FLASK_ENV }}
 
-    - name: Run Tests
-      run: pytest -c pytest.ini
+    - name: Run pylint Linting
+      id: pylint
+      run: |
+        pip install pylint
+        pylint your_module.py --fail-under=8.5
+      continue-on-error: true
+
+    - name: Run Tests and Calculate Coverage
+      id: coverage
+      run: |
+        pip install pytest pytest-cov
+        pytest -c pytest.ini --cov --cov-fail-under=80
       env:
         FLASK_ENV: ${{ secrets.FLASK_ENV }}
         MAIL_USERNAME: ${{ secrets.MAIL_USERNAME }}
@@ -41,3 +50,10 @@ jobs:
         MAIL_DEFAULT_SENDER: ${{ secrets.MAIL_DEFAULT_SENDER }}
         SECRET_KEY: ${{ secrets.SECRET_KEY }}
         REFRESH_SECRET_KEY: ${{ secrets.REFRESH_SECRET_KEY }}
+
+    - name: Check linting and coverage results
+      run: |
+        if [ ${{ steps.pylint.outcome }} == 'failure' ] || [ ${{ steps.coverage.outcome }} == 'failure' ]; then
+          exit 1
+        fi
+      continue-on-error: true
