--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ coverage==7.3.2
 cryptography==41.0.4
 dill==0.3.7
 exceptiongroup==1.1.3
+flake8==6.1.0
 Flask==3.0.0
 Flask-Mail==0.9.1
 Flask-Migrate==4.0.5
@@ -23,7 +24,9 @@ packaging==23.2
 platformdirs==3.11.0
 pluggy==1.3.0
 psycopg2-binary==2.9.9
+pycodestyle==2.11.1
 pycparser==2.21
+pyflakes==3.1.0
 PyJWT==2.8.0
 pylint==3.0.1
 pytest==7.4.2
